welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:1: error: not found: type boolean
def alarmClock(day : Int,  vacation : boolean) :String={
                                      ^